[workspace]
members = ["bincache"]
resolver = "2"

[workspace.package]
authors = [
    "Zitane Labs",
    "Marco Quinten <marco@smq.capital>",
    "Thomas Bäcker <neotamandua@1337.run>"
]
license = "MIT"
repository = "https://github.com/ZitaneLabs/bincache"
rust-version = "1.65"
readme = "README.md"
