[package]
name = "bincache"
version = "0.2.0"
edition = "2021"
description = "ZitaneLabs binary cache."

[features]
default = ["implicit-blocking"]
implicit-blocking = []
blocking = []
tokio1 = ["dep:tokio"]
async-std1 = ["dep:async-std"]

[dependencies]
paste = "1.0.12"
thiserror = "1.0.40"
async-trait = { version = "0.1" }
tokio = { version = "1", features = ["rt", "fs", "io-util"], optional = true }
async-std = { version = "1", optional = true }

[dev-dependencies]
uuid = { version = "1.3.3", features = ["v4"] }
tokio = { version = "1", features = ["rt", "rt-multi-thread", "macros"] }
async-std = { version = "1", features = ["attributes"] }
