[package]
name = "bincache"
version = "0.2.0"
edition = "2021"
description = "ZitaneLabs binary cache."

[features]
default = ["implicit-blocking"]
implicit-blocking = ["dep:futures-util", "async-compression/futures-io"]
blocking = ["dep:futures-util", "async-compression/futures-io"]
rt_tokio_1 = ["dep:tokio", "async-compression/tokio"]
rt_async-std_1 = ["dep:async-std", "async-compression/futures-io"]
comp_zstd = ["async-compression/zstd"]

[dependencies]
paste = "1.0.12"
thiserror = "1.0.40"
async-trait = { version = "0.1" }
tokio = { version = "1", features = ["rt", "fs", "io-util"], optional = true }
async-std = { version = "1", optional = true }
async-compression = {version = "0.4.0"}
futures-util = { version = "0.3", features = ["io"], optional = true }

[dev-dependencies]
uuid = { version = "1.3.3", features = ["v4"] }
tokio = { version = "1", features = ["rt", "rt-multi-thread", "macros"] }
async-std = { version = "1", features = ["attributes"] }
